# prime2.0

./: .gitignore  README.md  README_steps.md  blocks.csv  intermediate.xml  intermediate_builder.py  meta.xml  out_tree.xml  pdf_to_tree.py  requirement.txt  requirements.txt  structured.xml  table_extraction  tree_xml_builder.py  validate.py
.devcontainer/: devcontainer.json
.myenv/: pyvenv.cfg
.myenv/Scripts/: activate  activate.bat
DoucmentAIApproach/: my.json  script.py
DoucmentAIApproach/myvenv/: pyvenv.cfg
DoucmentAIApproach/myvenv/Scripts/: activate  activate.bat
GeminiAPIApproach/: app.py  extractor.py  requirement.txt  schema.py
LLMApproach/: output.xml  simple_pdf_to_xml.py
LayouyParserApproach/: script.py
LayouyParserApproach/lp-env/: pyvenv.cfg
LayouyParserApproach/lp-env/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py  pygrun
MolApproach/: script.py
MolApproach/myenv/: pyvenv.cfg
MolApproach/myenv/Scripts/: activate  activate.bat  dumppdf.py  get_gprof  get_objgraph  mpire-dashboard  pdf2txt.py  undill  vba_extract.py
PaddleOCRApproach/: README.txt  extract_text.py.py
PaddleOCRApproach/for_text_pdf/: script.py
PaddleOCRApproach/myvenv/: pyvenv.cfg
PaddleOCRApproach/myvenv/Scripts/: activate  activate.bat
Previous Runs/: intermediate.xml
TestFiles/HH_00478/Output/: HH_00478_2025.06.24_2025.07.01.xml
pdf2tree/: __init__.py  abula_tables.py  classification.py  cli.py  header_footer.py  inline_detection.py  lists.py  pdfio.py  pipeline.py  pyproject.toml  tables.py  textutils.py  xmlout.py
(+4 files in other folders)
